--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-file",
+  "name": "mongo-file",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -11,7 +11,8 @@
     "body-parser": "^1.15.2",
     "connect": "^3.4.1",
     "ejs": "^2.4.2",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "mongodb": "^2.1.18"
   },
   "devDependencies": {
     "nodemon": "^1.9.2"
