--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^2.0.0",
     "ejs": "^2.4.2",
     "express": "^4.14.0",
+    "method-override": "^2.3.6",
     "mongodb": "^2.1.18"
   },
   "devDependencies": {
